[package]
name = "mjpeg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.66"}
actix-web = "4"
actix-cors = "0.6.2"
image = "0.24"
tokio = { version = "1.16.1", features = ["full"] }
futures = "0.3.1"