[package]
name = "mjpeg-rs"
version = "0.1.0"
edition = "2021"
authors = ["Dimitrii <sexykdi@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.66"}
actix-web = "4"
actix-cors = "0.6.2"
tokio = { version = "1.16.1", features = ["full"] }
futures = "0.3.1"